--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <div class="logo">
                 <a href="#">
-                    <img src="images/logo.svg" alt="">
+                    <img src="logo.svg" alt="">
                 </a>
             </div>
 
@@ -44,11 +44,11 @@
 
 
             <div class="mobile-menu active">
-                <img src="images/menu-icon.svg" alt="">
+                <img src="menu-icon.svg" alt="">
             </div>
 
             <div class="mobile-close">
-                <img src="images/close-icon.svg" alt="">
+                <img src="close-icon.svg" alt="">
             </div>
 
         </nav>
@@ -81,7 +81,7 @@
 
         <div class="hero-wrapper">
             <div class="hero-image">
-                <img src="images/hero-image.svg" alt="">
+                <img src="hero-image.svg" alt="">
                 <div class="hero-ground"></div>
             </div>
 
@@ -95,31 +95,31 @@
 
         <div class="social-icons">
             <a href="#">
-                <img src="images/instagram-logo.svg" alt="">
+                <img src="instagram-logo.svg" alt="">
             </a>
 
             <a href="#">
-                <img src="images/facebook-logo.svg" alt="">
+                <img src="facebook-logo.svg" alt="">
             </a>
 
             <a href="#">
-                <img src="images/twitter-logo.svg" alt="">
+                <img src="twitter-logo.svg" alt="">
             </a>
         </div>
     </div>
 
     <div class="hero-bg-right">
-        <img src="images/hero-bg.svg" alt="">
+        <img src="hero-bg.svg" alt="">
     </div>
 
     <div class="hero-bg-left">
-        <img src="images/bg-left3.svg" alt="">
-        <img src="images/bg-left2.svg" alt="">
-        <img src="images/bg-left1.svg" alt="">
+        <img src="bg-left3.svg" alt="">
+        <img src="bg-left2.svg" alt="">
+        <img src="bg-left1.svg" alt="">
     </div>
 
-    <img class="bg-left-mobile" src="images/bg-left-mobile.svg" alt="">
-    <img class="bg-bottom-mobile" src="images/bg-bottom-mobile.svg" alt="">
+    <img class="bg-left-mobile" src="bg-left-mobile.svg" alt="">
+    <img class="bg-bottom-mobile" src="bg-bottom-mobile.svg" alt="">
 
     <script src="main.js"></script>
 </body>
